--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
+      "react/require-default-props": "off",
       "react/jsx-filename-extension": [
         1,
         {
