--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
       "react/require-default-props": "off",
+      "react-hooks/exhaustive-deps": "off",
       "react/jsx-filename-extension": [
         1,
         {
