--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
+      "dot-notation": "off",
       "react/jsx-props-no-spreading": "off",
       "react/require-default-props": "off",
       "react-hooks/exhaustive-deps": "off",
