fixed eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,11 +29,11 @@
       ],
       "prettier/prettier": "error",
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
+      "react-hooks/exhaustive-deps": "off",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
       "react/require-default-props": "off",
-      "react-hooks/exhaustive-deps": "off",
+      "import/no-named-default": "off",
       "react/jsx-filename-extension": [
         1,
         {
