--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "reactotron-react-js": "^3.3.7"
   }
 }
