--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       "react/jsx-props-no-spreading": "off",
       "react/require-default-props": "off",
       "import/no-named-default": "off",
+      "import/no-extraneous-dependencies": "off",
       "react/jsx-filename-extension": [
         1,
         {
