added rule as an error instead of warning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
       "@typescript-eslint/no-use-before-define": [
         "error"
       ],
+      "@typescript-eslint/no-explicit-any": "error",
       "prettier/prettier": "error",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "off",
