--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,11 @@
-name: Lint
+name: Check
 
 on:
   pull_request:
     branches: [develop, main]
 
 jobs:
-  checks:
+  eslint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,4 +15,4 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: ESLint Check
-        run: yarn lint
+        run: yarn eslint-check
