--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,19 +1,18 @@
-name: Lint
+name: Check
 
 on:
   pull_request:
     branches: [develop, main]
 
 jobs:
-  checks:
-    if: github.event_name != 'push'
+  eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
       - name: Install dependencies
         run: yarn
       - name: ESLint Check
-        run: yarn lint
+        run: yarn eslint-check
